[package]
name = "bevy_eq_assets"
version = "0.1.0"
authors = ["Chad Jablonski <chad@jablonski.xyz>"]
edition = "2021"
repository = "https://github.com/cjab/bevy_eq_assets"
readme = "README.md"
keywords = ["everquest", "bevy", "wld", "loader", "assets"]
categories = ["game-development", "graphics", "parsing", "rendering::data-formats"]
license = "MIT"

[dependencies]
eq_archive = { git = "https://github.com/cjab/eq_archive" }
eq_wld = "0.2.1"
log = "0.4.11"
env_logger = "0.7"
bevy_ecs = "0.9.1"
bevy_app = "0.9.1"
bevy_asset = "0.9.1"
bevy_reflect = "0.9.1"
bevy_render = "0.9.1"
bevy_utils = "0.9.1"
bevy_pbr = "0.9.1"
bevy_scene = "0.9.1"
bevy_transform = "0.9.1"
bevy_math = "0.9.1"
bevy_hierarchy = "0.9.1"
anyhow = "1.0"
image = "0.23.2"

[dev-dependencies]
bevy = "0.9.1"
bevy_fly_camera = { git = "https://github.com/mcpar-land/bevy_fly_camera", branch = "master" }
